--- a/src/Components/Spinner/spinner.css
+++ b/src/Components/Spinner/spinner.css
@@ -10,7 +10,7 @@
     width: 50px;
     height: 50px;
     border: 10px solid #f3f3f3; /* Light grey */
-    border-top: 10px solid #40Ae; /* Blue */
+    border-top: 10px solid #041858; /* Blue */
     border-radius: 50%;
     animation: spinner 1.5s linear infinite;
   }
